Spacing and style issues

--- a/themes/devan/source/css/home.styl
+++ b/themes/devan/source/css/home.styl
@@ -26,7 +26,7 @@
           display: none
 
 .component
-  margin: 1em 5px
+  margin: 1em 10px 0 0
   a
     .description
       color: darken(color-default, 25)
@@ -45,8 +45,8 @@
       font-size: .9em
   .tag
       color: color-orange
-      font-size: .9em
+      font-size: .8em
       border: 1px solid black;
       border-radius: 5px;
       background-color: #333;
-      padding: 0 5px;
+      padding: 4px 8px;
